force-app/main/default/objects/Lease_Charge__c/Lease_Charge__c.object-meta.xml
<CustomObject>
    <label>Lease Charge</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Lease Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>