force-app/main/default/objects/Lease_Charge__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <summarizedField>Lease_Payment__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Lease_Payment__c.Lease_Charge__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>