force-app/main/default/objects/Lease_Charge__c/fields/Late_Fees__c.field-meta.xml
<CustomField>
    <fullName>Late_Fees__c</fullName>
    <inlineHelpText>A late fee of 5% is added automatically if this charge is not paid on time.</inlineHelpText>
    <label>Late Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>