force-app/main/default/objects/Lease_Charge__c/fields/Lease__c.field-meta.xml
<CustomField>
    <fullName>Lease__c</fullName>
    <label>Lease</label>
    <referenceTo>Lease__c</referenceTo>
    <relationshipLabel>Lease Charges</relationshipLabel>
    <relationshipName>Lease_Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>