force-app/main/default/objects/Lease_Charge__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <formula>IF(
    Remaining_Balance__c = 0.00, 
    TRUE, 
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>