force-app/main/default/objects/Lease_Charge__c/fields/Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance__c</fullName>
    <formula>Total_Amount_Due__c -  Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>