force-app/main/default/objects/Lease_Charge__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <formula>Lease__r.Tenant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant</label>
    <type>Text</type>
</CustomField>