force-app/main/default/objects/Lease_Charge__c/fields/Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Due__c</fullName>
    <formula>Subtotal__c + Late_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>