force-app/main/default/objects/Lease_Charge__c/validationRules/Billing_Date_Greater_Than_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Date_Greater_Than_Due_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Billing_Date__c &gt;  DATEVALUE(Due_Date__c)</errorConditionFormula>
    <errorMessage>The Billing Date cannot be greater than the Due Date.</errorMessage>
</ValidationRule>