force-app/main/default/objects/Lease_Charge__c/listViews/Charges_and_Leases.listView-meta.xml
<ListView>
    <fullName>Charges_and_Leases</fullName>
    <columns>NAME</columns>
    <columns>Lease__c</columns>
    <columns>Tenant__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Late_Fees__c</columns>
    <columns>Remaining_Balance__c</columns>
    <columns>Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Lease Charges</label>
    <sharedTo>
        <group>Leasing_Team</group>
        <group>SF_Admin_Team</group>
    </sharedTo>
</ListView>